--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <title>vggukiesm's stream ♡</title>
-  <meta name="STREAMING NOW!" content="in the soop">
+  <meta name="STREAMING NOW!" content="in the soop 2">
   <meta name="twitter:card" content="player" />
   <meta name="twitter:image" content="https://i.pinimg.com/564x/57/c0/d8/57c0d8ab21f37417bcab547f2753a564.jpg" />
   <meta name="twitter:title" content="MAJ's stream" />
