--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="twitter:image" content="https://i.pinimg.com/564x/57/c0/d8/57c0d8ab21f37417bcab547f2753a564.jpg" />
   <meta name="twitter:title" content="MAJ's stream" />
   <meta name="twitter:description" content="If you're a filo and 18 years old by May 2022, register now to vote!" />
-  <meta name="twitter:player" content="https://www.twitch.tv/vggukiesm" />
+  <meta name="twitter:player" content="https://player.twitch.tv/?channel=vggukiesm&parent=www.twitter.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620">" />
   <meta name="twitter:player:width" content="360" />
   <meta name="twitter:player:height" content="200" />
   </head>
